--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,3 @@
-Flask==2.2.5
-transformers==4.33.1
-bitsandbytes
-torch==2.0.1
-tqdm==4.66.1
-scipy==1.11.3
-Flask-WTF
-pytest
-gunicorn
-Flask-SQLAlchemy
+version https://git-lfs.github.com/spec/v1
+oid sha256:5a1f036a3cd4c157dc3325a94d641adda59185a924e149d3232bd181f9e91d9b
+size 129
